--- a/manifest.json
+++ b/manifest.json
@@ -35,5 +35,9 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "web_accessible_resources": [{
+    "resources": ["voices.json"],
+    "matches": ["<all_urls>"]
+  }]
 }
